# foreman-todo-api

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: autoagent-config.yml
.github/actions/autoagent-setup/: action.yml
.github/scripts/: autoagent-config.sh  test-autoagent-config.sh
.github/workflows/: auto-week-rollover.yml  autoagent-fixer.yml  autoagent-implementer.yml  autoagent-merger.yml  test-autoagent-config.yml  test-workflows-lint.yml  test.yml
docs/change-sets/: 1.md  10.md  13.md  16.md  19.md  22.md  25.md  28.md  31.md  34.md
src/todo_api/: app.py  auth.py  db.py  events.py  rate_limit.py
tests/: conftest.py  test_auth.py  test_auth_isolation.py  test_health.py  test_rate_limit_anon.py  test_rate_limit_authed.py  test_rate_limit_unit.py  test_tags_crud.py  test_todos_create.py  test_todos_delete.py  test_todos_filter.py  test_todos_patch.py  test_todos_read.py  test_todos_stats.py  test_todos_tag_filter.py  test_todos_tags.py  test_websocket.py
