[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foreman-todo-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110",
    "pydantic[email]>=2.6",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todo_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
